[package]
name = "yew-app"
version = "0.1.0"
authors = ["David Wallace Croft <david@croftsoft.com>"]
categories = ["mathematics"]
description = "Yew-based Retirement Calculator"
edition = "2021"
homepage = "http://www.croftsoft.com/"
keywords = ["calculator", "retirement", "yew"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/david-wallace-croft/retirement-calculator"

[dependencies]
com-croftsoft-core = "0.1.0"
log = "0.4.6"
wasm-logger = "0.2.0"
web-sys = "0.3.58"
yew = "0.19"
